editing content in blocks

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
 
                 <div class="cust_slider-arrows">
-                    <a href="javascript:void(0)" class="cust-arrow cust-arrow_prev" ></a>
+                    <a href="javascript:void(0)" class="cust-arrow cust-arrow_prev"></a>
                     <span class="separator"></span>
                     <a href="javascript:void(0)" class="cust-arrow cust-arrow_next"></a>
                 </div>
@@ -105,11 +105,9 @@
                                     <span class="count-slide"></span>
                                 </div>
                                 <div class="cust_slider-arrows">
-                                    <a href="javascript:void(0)" class="cust-arrow cust-arrow_prev"
-                                        ></a>
+                                    <a href="javascript:void(0)" class="cust-arrow cust-arrow_prev"></a>
                                     <span class="separator"></span>
-                                    <a href="javascript:void(0)" class="cust-arrow cust-arrow_next"
-                                       ></a>
+                                    <a href="javascript:void(0)" class="cust-arrow cust-arrow_next"></a>
                                 </div>
                             </div>
                         </div>
@@ -129,10 +127,9 @@
                                     </div>
                                 </div>
 
-                                <div class="short-description_body">Dolor ex ad aute fugiat. Nulla duis nostrud
-                                    incididunt
-                                    velit
-                                    consectetur minim. Nisi consequat eu veniam ullamco enim laboris.</div>
+                                <div class="short-description_body">Lorem, ipsum dolor sit amet consectetur adipisicing
+                                    elit. Rerum voluptate architecto ipsum perspiciatis voluptas unde fugiat odit esse
+                                    soluta excepturi!</div>
                             </div>
                             <div class="main-description">
                                 <div class="title">Цього року в Україні</div>
@@ -140,12 +137,11 @@
                                     <img src="./static/img/icons/ua.png" alt="">
                                 </div>
                                 <div class="block-line"></div>
-                                <div class="description">Cillum consequat culpa cupidatat consectetur irure sint
-                                    adipisicing
-                                    dolor sint labore ipsum nostrud deserunt elit. Elit sunt minim magna nulla esse
-                                    aliquip
-                                    nulla. Nisi tempor culpa sint esse sint in veniam anim consequat est consectetur
-                                    ipsum.
+                                <div class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                    Reiciendis distinctio voluptate itaque neque nulla, nobis, in iure fugiat accusamus
+                                    inventore sit odit laboriosam rem odio esse quibusdam ipsum magni iste? Neque
+                                    possimus earum iusto ullam magnam illum beatae esse voluptatum ab commodi optio,
+                                    odit doloremque, eos assumenda exercitationem, nisi praesentium.
                                 </div>
                             </div>
                             <div class="mobile-footer">
@@ -155,11 +151,9 @@
                                     <span class="count-slide"></span>
                                 </div>
                                 <div class="cust_slider-arrows">
-                                    <a href="javascript:void(0)" class="cust-arrow cust-arrow_prev"
-                                        ></a>
+                                    <a href="javascript:void(0)" class="cust-arrow cust-arrow_prev"></a>
                                     <span class="separator"></span>
-                                    <a href="javascript:void(0)" class="cust-arrow cust-arrow_next"
-                                       ></a>
+                                    <a href="javascript:void(0)" class="cust-arrow cust-arrow_next"></a>
                                 </div>
                             </div>
                         </div>
@@ -179,10 +173,7 @@
                                     </div>
                                 </div>
 
-                                <div class="short-description_body">Dolor ex ad aute fugiat. Nulla duis nostrud
-                                    incididunt
-                                    velit
-                                    consectetur minim. Nisi consequat eu veniam ullamco enim laboris.</div>
+                                <div class="short-description_body">Lorem ipsum dolor sit amet consectetur.</div>
                             </div>
                             <div class="main-description">
                                 <div class="title">Цього року в Україні</div>
@@ -190,12 +181,10 @@
                                     <img src="./static/img/icons/ua.png" alt="">
                                 </div>
                                 <div class="block-line"></div>
-                                <div class="description">Cillum consequat culpa cupidatat consectetur irure sint
-                                    adipisicing
-                                    dolor sint labore ipsum nostrud deserunt elit. Elit sunt minim magna nulla esse
-                                    aliquip
-                                    nulla. Nisi tempor culpa sint esse sint in veniam anim consequat est consectetur
-                                    ipsum.
+                                <div class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non
+                                    dignissimos corrupti, minima blanditiis reprehenderit eius quae dicta, aspernatur
+                                    sunt mollitia id, quisquam dolorum! Natus saepe vero laborum maiores voluptate esse
+                                    quae minus?
                                 </div>
                             </div>
                             <div class="mobile-footer">
@@ -205,11 +194,9 @@
                                     <span class="count-slide"></span>
                                 </div>
                                 <div class="cust_slider-arrows">
-                                    <a href="javascript:void(0)" class="cust-arrow cust-arrow_prev"
-                                        ></a>
+                                    <a href="javascript:void(0)" class="cust-arrow cust-arrow_prev"></a>
                                     <span class="separator"></span>
-                                    <a href="javascript:void(0)" class="cust-arrow cust-arrow_next"
-                                       ></a>
+                                    <a href="javascript:void(0)" class="cust-arrow cust-arrow_next"></a>
                                 </div>
                             </div>
                         </div>
@@ -229,10 +216,9 @@
                                     </div>
                                 </div>
 
-                                <div class="short-description_body">Dolor ex ad aute fugiat. Nulla duis nostrud
-                                    incididunt
-                                    velit
-                                    consectetur minim. Nisi consequat eu veniam ullamco enim laboris.</div>
+                                <div class="short-description_body">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit. Delectus aliquid unde, itaque vitae repellendus sequi nesciunt tenetur id
+                                    voluptate optio dolorum adipisci?</div>
                             </div>
                             <div class="main-description">
                                 <div class="title">Цього року в Україні</div>
@@ -240,12 +226,12 @@
                                     <img src="./static/img/icons/ua.png" alt="">
                                 </div>
                                 <div class="block-line"></div>
-                                <div class="description">Cillum consequat culpa cupidatat consectetur irure sint
-                                    adipisicing
-                                    dolor sint labore ipsum nostrud deserunt elit. Elit sunt minim magna nulla esse
-                                    aliquip
-                                    nulla. Nisi tempor culpa sint esse sint in veniam anim consequat est consectetur
-                                    ipsum.
+                                <div class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                    Deleniti sequi sed quisquam incidunt tempora rem iusto similique explicabo,
+                                    sapiente, nobis animi ipsa vel possimus perferendis doloribus? Quisquam, perferendis
+                                    beatae itaque optio sed adipisci! Necessitatibus recusandae magnam officia illum sed
+                                    autem quod vitae. Rem, sunt quod error vero iure nihil perspiciatis fugiat, rerum
+                                    perferendis aperiam quis ex voluptas at mollitia. Repellat, aliquam?
                                 </div>
                             </div>
                             <div class="mobile-footer">
@@ -255,11 +241,9 @@
                                     <span class="count-slide"></span>
                                 </div>
                                 <div class="cust_slider-arrows">
-                                    <a href="javascript:void(0)" class="cust-arrow cust-arrow_prev"
-                                        ></a>
+                                    <a href="javascript:void(0)" class="cust-arrow cust-arrow_prev"></a>
                                     <span class="separator"></span>
-                                    <a href="javascript:void(0)" class="cust-arrow cust-arrow_next"
-                                       ></a>
+                                    <a href="javascript:void(0)" class="cust-arrow cust-arrow_next"></a>
                                 </div>
                             </div>
                         </div>
@@ -279,10 +263,11 @@
                                     </div>
                                 </div>
 
-                                <div class="short-description_body">Dolor ex ad aute fugiat. Nulla duis nostrud
-                                    incididunt
-                                    velit
-                                    consectetur minim. Nisi consequat eu veniam ullamco enim laboris.</div>
+                                <div class="short-description_body">Lorem ipsum dolor sit amet consectetur, adipisicing
+                                    elit. Vel doloribus perspiciatis, sed numquam esse tenetur? Eum soluta, aliquam
+                                    recusandae distinctio incidunt illo eius labore unde, nisi, nobis facilis? Ad
+                                    aspernatur, similique repellat debitis corporis maxime commodi. Sunt quam officiis
+                                    quisquam fugiat fuga?</div>
                             </div>
                             <div class="main-description">
                                 <div class="title">Цього року в Україні</div>
@@ -290,12 +275,11 @@
                                     <img src="./static/img/icons/ua.png" alt="">
                                 </div>
                                 <div class="block-line"></div>
-                                <div class="description">Cillum consequat culpa cupidatat consectetur irure sint
-                                    adipisicing
-                                    dolor sint labore ipsum nostrud deserunt elit. Elit sunt minim magna nulla esse
-                                    aliquip
-                                    nulla. Nisi tempor culpa sint esse sint in veniam anim consequat est consectetur
-                                    ipsum.
+                                <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis
+                                    totam perferendis quod distinctio. Perspiciatis facere eaque harum ipsam quibusdam.
+                                    Maiores, corporis dolorem? Voluptatibus maiores illum, distinctio repellat iusto
+                                    tempora eveniet nulla. Laborum at aspernatur accusamus modi quaerat ex obcaecati. Ea
+                                    perspiciatis deserunt rem voluptate at.
                                 </div>
                             </div>
                             <div class="mobile-footer">
@@ -305,11 +289,9 @@
                                     <span class="count-slide"></span>
                                 </div>
                                 <div class="cust_slider-arrows">
-                                    <a href="javascript:void(0)" class="cust-arrow cust-arrow_prev"
-                                        ></a>
+                                    <a href="javascript:void(0)" class="cust-arrow cust-arrow_prev"></a>
                                     <span class="separator"></span>
-                                    <a href="javascript:void(0)" class="cust-arrow cust-arrow_next"
-                                       ></a>
+                                    <a href="javascript:void(0)" class="cust-arrow cust-arrow_next"></a>
                                 </div>
                             </div>
                         </div>
@@ -355,11 +337,9 @@
                                     <span class="count-slide"></span>
                                 </div>
                                 <div class="cust_slider-arrows">
-                                    <a href="javascript:void(0)" class="cust-arrow cust-arrow_prev"
-                                        ></a>
+                                    <a href="javascript:void(0)" class="cust-arrow cust-arrow_prev"></a>
                                     <span class="separator"></span>
-                                    <a href="javascript:void(0)" class="cust-arrow cust-arrow_next"
-                                       ></a>
+                                    <a href="javascript:void(0)" class="cust-arrow cust-arrow_next"></a>
                                 </div>
                             </div>
                         </div>
